--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   background-color: #4d5ae5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-benefits {
   background-color: #fff;
@@ -180,6 +181,16 @@ a {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.icons-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 .title-benefits {
   font-weight: 500;
