--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,31 @@ img {
 .title-portfolio {
   text-align: center;
 }
+.social-icon {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.link-icon:hover,
+.link-icon:focus {
+  background-color: #404bbf;
+}
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+.link-icon {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-item {
+  fill: #f4f4fd;
+}
 .team-member {
   padding: 32px 0;
 }
@@ -258,6 +283,8 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .item-team:first-child {
   width: calc((100% - 72px) / 4);
