--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,9 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
 }
+.portfolio-item:hover .text-our {
+  transform: translateY(0%);
+}
 .portfolio-item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
