--- a/css/styles.css
+++ b/css/styles.css
@@ -389,3 +389,36 @@ img {
   display: inline-block;
   margin-bottom: 16px;
 }
+.media-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.item-footer {
+  width: 40px;
+  height: 40px;
+}
+.icon-footer {
+  fill: #f4f4fd;
+}
+.media-conteiner {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
+}
+.list-footer {
+  display: flex;
+  gap: 16px;
+}
+.link-media {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
